--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # MONGO_URI=mongodb://localhost:27017/inventory_management
-MONGO_URI=mongodb+srv://nisan9511:<db_password>@cluster0.c6yj8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://nisan9511:TC5REqTAOQUVHj2O@cluster0.c6yj8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=ySDFMSKLDFLMDSFN
